test/hlt/test_case/basic_test/result_repl_mode.txt
Result for test_case/basic_test/testcase.py:
======[pikapython packages installed]======
pikascript-core==v1.13.3 (2024/05/25 01:26:44)
PikaStdLib===v1.13.3
===========================================
~~~/ POWERED BY \~~~
~  pikapython.com  ~
~~~~~~~~~~~~~~~~~~~~
hello pikascript
>>> print('======= Test Start =======')
======= Test Start =======
>>> a = 1
>>> b = 2
>>> a + b
3
>>> for i in range(10):
...     print(i)
... print('======= Test End =======')
0
1
2
3
4
5
6
7
8
9
======= Test End =======
>>> 
Error: line buff overflow, please use bigger 'PIKA_LINE_BUFF_SIZE'
